fix dark mode and project descriptions

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
   scroll-padding-top: 88px;
-  font-family: "Outfit", Georgia;
+  font-family: "Outfit", Georgia, sans-serif;
 }
 
 ul {
@@ -31,7 +31,7 @@ a {
 
 body {
   margin: 0 auto;
-  font-family: "Outfit", Georgia;
+  font-family: "Outfit", Georgia, sans-serif;
   background-color: var(--color-background);
 
   line-height: 1.5;
@@ -302,20 +302,23 @@ figure {
   align-self: center;
   display: flex;
   position: relative;
+  justify-content: center;
 }
 
 .project__img {
   max-width: 100%;
+  height: 220px;
   border-radius: 10px;
   transition: all 0.3s ease-in-out;
 }
 
 .project__link-text {
+  flex: 1;
   position: absolute;
   top: 0;
   background-color: var(--color-secondary);
-  width: 100%;
   height: 100%;
+  width: 100%;
   opacity: 0;
   z-index: -1;
   border-radius: 10px;
@@ -329,13 +332,11 @@ figure {
 
 .project__link:hover .project__link-text {
   transform: scale(1.1);
-  opacity: 0.8;
+  opacity: 0.82;
   z-index: 10;
 }
 .project__link:hover .project__img {
-  opacity: 0.8;
   transform: scale(1.1);
-  box-shadow: 0px 2px 5px;
 }
 
 .project i {
@@ -439,27 +440,6 @@ footer a {
     place-content: center;
     border-radius: 10px;
     padding: 0.4em 1em;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: #18181b;
-    --color-primary: #e4e4e7;
-    --color-secondary: #facc15;
-  }
-
-  nav {
-    background-color: var(--color-background);
-  }
-
-  .aside-perfil {
-    background-color: var(--color-background);
-    color: var(--color-primary);
-  }
-
-  footer {
-    color: var(--color-background);
   }
 }
 
